--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
