--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.1",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-responsive-masonry": "^2.1.3",
+    "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load": "^4.0.1",
+    "react-lazy-load-component": "^1.0.9",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-responsive-masonry": "^2.6.0",
     "react-router-dom": "^7.0.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
@@ -39,6 +46,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-lazyload": "^3.2.3",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
