--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.1",
+    "@types/lodash": "^4.17.13",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-responsive-masonry": "^2.1.3",
     "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
