--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.47.1",
     "@types/lodash": "^4.17.13",
+    "@types/react-infinite-scroll-component": "^4.2.5",
     "@types/react-lazy-load-image-component": "^1.6.4",
     "@types/react-responsive-masonry": "^2.1.3",
     "blurhash": "^2.0.5",
